# voluptuous-serialize

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  requirements_test.txt  sample.proto  setup.cfg  setup.py  test_voluptuous_form.py  voluptuous_form.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pythonpublish.yml
docs/: docs.html  docs.md
script/: bootstrap  release
tests/: test_lib.py
voluptuous_json/: __init__.py
voluptuous_serialize/: __init__.py
