[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "voluptuous-serialize"
version = "2.7.0"
license = "Apache-2.0"
description = "Convert voluptuous schemas to dictionaries"
readme = "README.md"
authors = [{ name = "Paulus Schoutsen", email = "Paulus@PaulusSchoutsen.nl" }]
requires-python = ">=3.9"
dependencies = ["voluptuous"]

[project.urls]
"Source code" = "https://github.com/home-assistant-libs/voluptuous-serialize"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_unreachable = true

[tool.ruff]
lint.select = [
  "A",     # builtins shadowing
  "ANN",   # annotations
  "ASYNC", # async
  "B",     # bugbear
  "C4",    # comprehensions
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "FLY",   # flynt
  "FURB",  # refurb
  "G",     # logging
  "I",     # isort
  "LOG",   # logging
  "PTH",   # pathlib
  "RUF",   # ruff specific
  "SLF",   # private member access
  "SIM",   # simplify
  "T20",   # print
  "UP",    # pyupgrade
  "W",     # pydocstyle warning
]
lint.ignore = [
  "ANN401", # any-type
  "D203",   # incorrect-blank-line-before-class
  "D212",   # multi-line-summary-first-line
  "SIM102", # collapsible-if
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D101", # missing docstring in public class
  "D103", # missing docstring in public function
]
